--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -8,16 +8,17 @@ layout: default
           <h1 class="post-title">
            {% if site.title == "blank" -%}<span class="font-weight-bold">{{ site.first_name }}</span> {{ site.middle_name }} {{ site.last_name }}{%- else -%}{{ site.title }}{%- endif %}
           </h1>
-          <p class="desc">{{ page.subtitle }}</p>
+          <p class="desc" style="font-size:0.875em;">{{ page.subtitle }}</p>
         </header>
 
+        <br><br>
         <article>
           {% if page.profile -%}
           <div class="profile float-{%- if page.profile.align == 'left' -%}left{%- else -%}right{%- endif -%}">
             {%- if page.profile.image %}
               {%- assign profile_image_path = page.profile.image | prepend: 'assets/img/' -%}
-              {% include figure.html 
-              path=profile_image_path 
+              {% include figure.html
+              path=profile_image_path
               class="img-fluid z-dept-1 rounded"
               alt=page.profile.image -%}
             {% endif -%}
@@ -25,6 +26,14 @@ layout: default
             <div class="address">
               {{ page.profile.address }}
             </div>
+            {%- endif %}
+            {%- if page.profile.resume %}
+              <div class="resume">
+              <a href= "assets/files/ZejiaChen_CV.pdf", target="_blank">{{page.profile.resume}}</a>
+                <div class = "last_updated">
+                {{page.profile.last_updated}}
+                </div>
+              </div>
             {%- endif %}
           </div>
           {%- endif %}
@@ -51,7 +60,7 @@ layout: default
             <div class="contact-note">
               {{ site.contact_note }}
             </div>
-            
+
           </div>
           {%- endif %}
         </article>
