--- a/_includes/projects_horizontal.html
+++ b/_includes/projects_horizontal.html
@@ -1,43 +1,44 @@
-<div class="card-item col">
-  {%- if project.redirect -%}
-  <a href="{{ project.redirect }}">
+<!-- _includes/projects.html -->
+<div class="grid-sizer"></div>
+<div class="grid-item">
+  {%- if project.enable_hyperlink -%}
+  {% if project.redirect -%}
+    <a href="{{ project.redirect }}">
   {%- else -%}
-  <a href="{{ project.url | relative_url }}">
-  {%- endif -%}
+    <a href="{{ project.url | relative_url }}">
+  {%- endif %}
+  {%- endif %}
     <div class="card hoverable">
-      <div class="row g-0">
-        {%- if project.img -%}
-        <div class="card-img col-md-6">
-          {% responsive_image_block %}
-            path: {{ project.img }}
-            alt: "project thumbnail"
-          {% endresponsive_image_block %}
-        </div>
-        <div class="col-md-6">
-        {%- else -%}
-        <div class="col-md-12">
-        {%- endif -%}
-          <div class="card-body">
-            <h3 class="card-title text-lowercase">{{ project.title }}</h3>
-            <p class="card-text">{{ project.description }}</p>
-            <div class="row ml-1 mr-1 p-0">
-              {%- if project.github -%}
-              <div class="github-icon">
-                <div class="icon" data-toggle="tooltip" title="Code Repository">
-                  <a href="{{ project.github }}"><i class="fab fa-github gh-icon"></i></a>
-                </div>
-                {%- if project.github_stars -%}
-                <span class="stars" data-toggle="tooltip" title="GitHub Stars">
-                  <i class="fas fa-star"></i>
-                  <span id="{{ project.github_stars }}-stars"></span>
-                </span>
-                {%- endif -%}
-              </div>
-              {%- endif -%}
+      {%- if project.img %}
+      {%- include figure.html
+        path=project.img
+        alt="project thumbnail" -%}
+      {%- endif %}
+
+      <div class="card-body">
+        <h4 class="card-title">{{ project.title }}</h4>
+        <p class="card-text" style="white-space: pre-wrap;">{{ project.description }}</p>
+        {%- if project.first_author_link -%}
+        <a href="{{project.first_author_link}}">Check first author's site to learn more.</a>
+        {%- endif %}
+        <div class="row ml-1 mr-1 p-0">
+          {%- if project.github -%}
+          <div class="github-icon">
+            <div class="icon" data-toggle="tooltip" title="Code Repository">
+              <a href="{{ project.github }}"><i class="fab fa-github gh-icon"></i></a>
             </div>
+            {%- if project.github_stars -%}
+            <span class="stars" data-toggle="tooltip" title="GitHub Stars">
+              <i class="fas fa-star"></i>
+              <span id="{{ project.github_stars }}-stars"></span>
+            </span>
+            {%- endif %}
           </div>
+          {%- endif %}
         </div>
       </div>
     </div>
-  </a>
+  {%- if project.enable_hyperlink -%}
+    </a>
+  {%- endif -%}
 </div>
