--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -9,8 +9,26 @@ layout: default
             <p class="post-description">{{ page.description }}</p>
           </header>
 
-          <article>
-            {{ content }}
-          </article>
+          <!-- Content -->
 
+          {% if page.toc -%}
+          <p-contents>
+            <nav class="l-text figcaption">
+            <h4>Contents</h4>
+              {% for section in page.toc -%}
+              <div><a href="#{{ section.name | slugify }}">{{ section.name }}</a></div>
+              {% if section.subsections -%}
+              <ul>
+                {% for subsection in section.subsections -%}
+                <li><a href="#{{ subsection.name | slugify }}">{{ subsection.name }}</a></li>
+                {% endfor %}
+              </ul>
+              {%- endif -%}
+              {%- endfor %}
+              <hr>
+            </nav>
+          </p-contents>
+          {%- endif %}
+
+          {{ content }}
         </div>
