--- a/_includes/metadata.html
+++ b/_includes/metadata.html
@@ -11,6 +11,7 @@
     <!-- Standard metadata -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="google-site-verification" content="fBTYH_5zaYoNS1OzpSOB2ZJwAsx5dQWS9lE_5PX7ezg" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>
     {%- if site.title == "blank" -%}
