Added Notion Personal Inventory Database

--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -18,8 +18,8 @@
       <div class="card-body">
         <h4 class="card-title">{{ project.title }}</h4>
         <p class="card-text" style="white-space: pre-wrap;">{{ project.description }}</p>
-        {%- if project.first_author_link -%}
-        <a href="{{project.first_author_link}}">Check first author's site to learn more.</a>
+        {%- if project.direct_link -%}
+        <a href="{{project.direct_link}}">Direct link</a>
         {%- endif %}
         <div class="row ml-1 mr-1 p-0">
           {%- if project.github -%}
